--- a/property/templates/property/property_detail.html
+++ b/property/templates/property/property_detail.html
@@ -4,7 +4,7 @@
 {% block body %}
 
     
-    <div class="hero-wrap js-fullheight" style="background-image: url({% static 'images/bg_5.jpg'%});">
+    <div class="hero-wrap js-fullheight" style="background-image: url({% static 'images/portsaid.jpg'%});">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
