--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,7 @@
     
    
 
-    <div class="hero-wrap js-fullheight" style="background-image: url({% static 'images/bg_4.jpg'%}{% static 'images/bg_4.jpg'%});">
+    <div class="hero-wrap js-fullheight" style="background-image: url({% static 'images/bg_4.jpg'%});">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
