--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">EgyHotels.</a>
+      <a class="navbar-brand" href="/">{{myfooter.site_name}}</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
         aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
@@ -70,14 +70,12 @@
       <div class="row mb-5">
         <div class="col-md">
           <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">EgyHotels</h2>
-            <p>Experience Egypt's beauty and mystery in our luxurious hotels nestled amidst towering mountains.
-               Relax, unwind, and discover ancient wonders and modern amenities.
-               Book your stay today and discover hospitality's true meaning. Welcome to Egypt Hotels.</p>
+            <h2 class="ftco-heading-2">{{myfooter.site_name}}</h2>
+            <p>{{myfooter.description}}</p>
             <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+              <li class="ftco-animate"><a href="{{myfooter.twitter_link}}"><span class="icon-twitter"></span></a></li>
+              <li class="ftco-animate"><a href="{{myfooter.fb_link}}"><span class="icon-facebook"></span></a></li>
+              <li class="ftco-animate"><a href="{{myfooter.instagram_link}}"><span class="icon-instagram"></span></a></li>
             </ul>
           </div>
         </div>
@@ -111,10 +109,10 @@
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">Cairo , Egypt</span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+20102817237</span></a></li>
+                <li><span class="icon icon-map-marker"></span><span class="text">{{myfooter.address}}</span></li>
+                <li><a href="#"><span class="icon icon-phone"></span><span class="text">{{myfooter.phone}}</span></a></li>
                 <li><a href="#"><span class="icon icon-envelope"></span><span
-                      class="text">mahmoud.shaker123123@gmail.com</span></a></li>
+                      class="text">{{myfooter.email}}</span></a></li>
               </ul>
             </div>
           </div>
