--- a/settings/templates/settings/home.html
+++ b/settings/templates/settings/home.html
@@ -12,19 +12,21 @@
             <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><strong>Explore <br></strong> your amazing city</h1>
             <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Find great places to stay, eat, shop, or visit from local experts</p>
             <div class="block-17 my-4">
-              <form action="" method="post" class="d-block d-flex">
+              <form action="{% url 'home:home_search' %}" method="get" class="d-block d-flex">
                 <div class="fields d-block d-flex">
                   <div class="textfield-search one-third">
-                  	<input type="text" class="form-control" placeholder="Ex: food, service, hotel">
+                  	<input type="text" class="form-control" name="name" placeholder="Ex: food, service, hotel">
                   </div>
                   <div class="select-wrap one-third">
                     <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-                    <select name="" id="" class="form-control" placeholder="Keyword search">
-                      <option value="">Where</option>
-                      <option value="">San Francisco USA</option>
-                      <option value="">Berlin Germany</option>
-                      <option value="">Lodon United Kingdom</option>
-                      <option value="">Paris Italy</option>
+                    <select name="place" id="" class="form-control" placeholder="Keyword search">
+                    <option value="">Where</option>
+                      {% for place in places %}
+
+					  <option value="{{place}}">{{place}}</option>
+
+					  {% endfor %}
+                      
                     </select>
                   </div>
                 </div>
