--- a/about/templates/about/faq_list.html
+++ b/about/templates/about/faq_list.html
@@ -20,7 +20,7 @@
 <section class="ftco-section">
     <div class="container">
         <div class="row d-md-flex">
-            <div class="col-md-6 ftco-animate img about-image" style="background-image: url(images/about.jpg);">
+            <div class="col-md-6 ftco-animate img about-image" style="background-image: url({{about.image.url}});">
             </div>
             <div class="col-md-6 ftco-animate p-md-5">
                 <div class="row">
@@ -45,36 +45,23 @@
                             <div class="tab-pane fade show active" id="v-pills-whatwedo" role="tabpanel"
                                 aria-labelledby="v-pills-whatwedo-tab">
                                 <div>
-                                    <h2 class="mb-4">Offering Reliable Hosting</h2>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                        Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-                                        right at the coast of the Semantics, a large language ocean.</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate,
-                                        quibusdam sunt iste dolores consequatur</p>
+                                    <p>  {{about.what_we_do | safe}}</p>
                                 </div>
                             </div>
 
                             <div class="tab-pane fade" id="v-pills-mission" role="tabpanel"
                                 aria-labelledby="v-pills-mission-tab">
                                 <div>
-                                    <h2 class="mb-4">Exceptional Web Solutions</h2>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                        Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-                                        right at the coast of the Semantics, a large language ocean.</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate,
-                                        quibusdam sunt iste dolores consequatur</p>
+                                    <p>{{about.our_mission | safe}}</p>
+                                
                                 </div>
                             </div>
 
                             <div class="tab-pane fade" id="v-pills-goal" role="tabpanel"
                                 aria-labelledby="v-pills-goal-tab">
                                 <div>
-                                    <h2 class="mb-4">Help Our Customer</h2>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                        Consonantia, there live the blind texts. Separated they live in Bookmarksgrove
-                                        right at the coast of the Semantics, a large language ocean.</p>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt voluptate,
-                                        quibusdam sunt iste dolores consequatur</p>
+                                    <p>{{about.our_goals | safe}}</p>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -106,7 +93,7 @@
                                             class="collapsed"><i class="icon-plus-circle"></i></span><span
                                             class="expanded"><i class="icon-minus-circle"></i></span></a>
                                 </div>
-                                <div id="menu{{faq.id}}" class="collapse ">
+                                <div id="menu{{faq.id}}" class="collapse  {% if forloop.first %} show {% endif %}"    >
                                     <div class="card-body">
                                         <p>{{faq.description}}</p>
                                     </div>
