--- a/accounts/templates/profile/profile.html
+++ b/accounts/templates/profile/profile.html
@@ -28,7 +28,11 @@
         
         
 		<h5><a href="{% url 'accounts:profile_edit' %}">Edit Profile</a></h5>
-        <h5><a href="{% url 'password_change' %}">Change Password</a></h5>
+		<h5><a href="{% url 'accounts:profile_edit' %}">My Reservations</a></h5>
+		<h5><a href="{% url 'accounts:profile_edit' %}">My Listing</a></h5>
+
+
+       {% comment %}<h5><a href="{% url 'password_change' %}">Change Password</a></h5>{% endcomment %} 
     </div>
 </div>
 
