--- a/accounts/templates/profile/profile.html
+++ b/accounts/templates/profile/profile.html
@@ -28,7 +28,7 @@
         
         
 		<h5><a href="{% url 'accounts:profile_edit' %}">Edit Profile</a></h5>
-		<h5><a href="{% url 'accounts:profile_edit' %}">My Reservations</a></h5>
+		<h5><a href="{% url 'accounts:reservation' %}">My Reservations</a></h5>
 		<h5><a href="{% url 'accounts:profile_edit' %}">My Listing</a></h5>
 
 
